--- a/app/templates/edit_profile.html
+++ b/app/templates/edit_profile.html
@@ -6,15 +6,21 @@
 
 {% block content %}
     <h1>Редактирование профиля</h1>
-    <form method="POST" action="{{ url_for('update') }}">
+    <form method="POST" action="{{ url_for('edit_profile') }}">
         {{ form.hidden_tag() }}
         <div>
             {{ form.username.label }}<br>
             {{ form.username(size=32) }}
+            {% for error in form.username.errors %}
+                <span style="color: red;">[{{ error }}]</span>
+            {% endfor %}
         </div>
         <div>
             {{ form.email.label }}<br>
             {{ form.email(size=32) }}
+            {% for error in form.email.errors %}
+                <span style="color: red;">[{{ error }}]</span>
+            {% endfor %}
         </div>
         <div>
             {{ form.password.label }}<br>
